Todos los links subidos

--- a/index.html
+++ b/index.html
@@ -103,44 +103,44 @@
         { name: "Luz Rosa", image: "img/rosa.jpeg", tags: ["pop", "trap"], url: "https://open.spotify.com/album/7LzrBmi5dTqST3lPfeKbDP?si=1-FlqUOoRbKVairV-v6f0g" }
       ],
       "Extremoduro": [
-        { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Canciones Prohibidas", image: "img/canciones.jpeg", tags: ["rock"], url: "https://open.spotify.com/album/5QHJB2blBbAL8BjrD9hrhG?si=nx3hiW7KRPayQwYTRjxvyg" }
       ],
       "Judelline": [
-        { name: "Bodhiria", image: "img/bodhiria.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Bodhiria", image: "img/bodhiria.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/3fVXh36WypsZR2JGathvkq?si=M44OjmVxQv27K-Qd7xa0KQ" }
       ],
       "Juicy Bae": [
-        { name: "Antes De Conocerte", image: "img/antes.jpg", tags: ["trap", "r&b"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Antes De Conocerte", image: "img/antes.jpg", tags: ["trap", "r&b"], url: "https://open.spotify.com/album/3m6TsytKnxFmghjbFWLraO?si=8YomnAwGRcK0K0AskrzbZQ" },
+        { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/4NJFWpVWPgPvrciytpxOvr?si=YSbugIWzRnSPbjfmU1zhJA" },
+        { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap"], url: "https://open.spotify.com/album/3uCDoXLQZnDAck1R6Y0Tuk?si=_7vlINIhS4SQzPp7hYkWfQ" }
       ],
       "Quevedo": [
-        { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"], url: "https://open.spotify.com/album/3V2ApPxUSquOkjLQU3wmjh?si=3X4Knt8sQoW0twly0X0bRw" }
       ],
       "Raul Clyde": [
-        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["reggaetón"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Destino 2014", image: "img/destino.jpeg", tags: ["reggaetón"], url: "https://open.spotify.com/album/5KvIYKPV17rdUz4ZrTz7Qx?si=0bMFjSuJQHmJX4zgJIk2Jg" }
       ],
       "Recycled J": [
-        { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" },
-        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"], url: "https://open.spotify.com/album/4Vu2ERMwmGhJ3oOJrr9nfB?si=d7Tuy1_ETX2NHA7Tl5Yt9Q" },
+        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"], url: "https://open.spotify.com/album/3bwtp40wXMy9dWWlNDgL4u?si=6Cp_ZPVpRLOgtf9RotJz8g" }
       ],
       "Rels B": [
-        { name: "A New Star", image: "img/star.jpeg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "A New Star (1993)", image: "img/star.jpeg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" }
       ],
       "Rosalia": [
         { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "fusión"], url: "https://open.spotify.com/album/1IM3GwptCGYjRkzCBolyFK" },
         { name: "Motomami", image: "img/moto.jpg", tags: ["pop", "experimental"], url: "https://open.spotify.com/album/6jHuoYW4El7wPlpnLd8sLp" }
       ],
       "Sen Senra": [
-        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"], url: "https://open.spotify.com/album/6MxVqDR6nACRxGSePfK9y4?si=GnmoI9e2Teu4-YFmi6rd5Q" }
       ],
       "SZA": [
-        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/76290XdXVF9rPzGdNRWdCh" }
+        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/76290XdXVF9rPzGdNRWdCh?si=kFfr8PbpSi6A9rxDhreTxw" }
       ],
       "Taifa Yallah": [
-        { name: "Causa", image: "img/causa.jpg", tags: ["rap"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "Causa", image: "img/causa.jpg", tags: ["rap"], url: "https://open.spotify.com/album/5GyDhDfK24MhsOH1bX8gdW?si=dERDC1zRTMKnuStBj07X8A" }
       ],
       "The Weeknd": [
-        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b"], url: "https://open.spotify.com/album/2ODvWsOgouMbaA5xf0RkJe" }
+        { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b"], url: "https://open.spotify.com/album/2ODvWsOgouMbaA5xf0RkJe?si=9Yge93NSQvC1MfDVAkb0kA" }
       ]
     };
 
