Arreglo links Spotify

--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
         { name: "Preludio", image: "img/pre.jpg", tags: ["rap"], url: "https://open.spotify.com/album/3bwtp40wXMy9dWWlNDgL4u?si=6Cp_ZPVpRLOgtf9RotJz8g" }
       ],
       "Rels B": [
-        { name: "A New Star (1993)", image: "img/star.jpeg", tags: ["pop"], url: "https://open.spotify.com/album/EXAMPLE" }
+        { name: "A New Star (1993)", image: "img/star.jpeg", tags: ["pop"], url: "https://open.spotify.com/album/6MxVqDR6nACRxGSePfK9y4?si=5QjqYzytQTm7PQAKBqOuHA" }
       ],
       "Rosalia": [
-        { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "fusión"], url: "https://open.spotify.com/album/1IM3GwptCGYjRkzCBolyFK" },
-        { name: "Motomami", image: "img/moto.jpg", tags: ["pop", "experimental"], url: "https://open.spotify.com/album/6jHuoYW4El7wPlpnLd8sLp" }
+        { name: "El Mal Querer", image: "img/querer.jpg", tags: ["flamenco", "fusión"], url: "https://open.spotify.com/album/355bjCHzRJztCzaG5Za4gq?si=SzM_b0h0SY-htmVNgOHq5A" },
+        { name: "Motomami", image: "img/moto.jpg", tags: ["pop", "experimental"], url: "https://open.spotify.com/album/6jbtHi5R0jMXoliU2OS0lo?si=Bt0fzNnIR-i1JsGJtcDjuw" }
       ],
       "Sen Senra": [
-        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"], url: "https://open.spotify.com/album/6MxVqDR6nACRxGSePfK9y4?si=GnmoI9e2Teu4-YFmi6rd5Q" }
+        { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"], url: "https://open.spotify.com/album/7Hr8FOf7NQIe7UhLcllXq9?si=UkE2zZRsQ9qP_4bSPV5lNg" }
       ],
       "SZA": [
         { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/76290XdXVF9rPzGdNRWdCh?si=kFfr8PbpSi6A9rxDhreTxw" }
