--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       ],
       "Recycled J": [
         { name: "Casanova", image: "img/casanova.jpg", tags: ["pop"], url: "https://open.spotify.com/album/4Vu2ERMwmGhJ3oOJrr9nfB?si=d7Tuy1_ETX2NHA7Tl5Yt9Q" },
-        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"], url: "https://open.spotify.com/album/3bwtp40wXMy9dWWlNDgL4u?si=6Cp_ZPVpRLOgtf9RotJz8g" }
+        { name: "Preludio", image: "img/pre.jpg", tags: ["rap"], url: "https://open.spotify.com/album/3bwtp40wXMy9dWWlNDgL4u?si=6Cp_ZPVpRLOgtf9RotJz8g" },
+        { name: "San Jorge", image: "img/jorge.jpeg", tags: ["rap", "trap", "pop"], url: "https://open.spotify.com/album/5SMgH661iAfJixb3gVRtH5?si=3iIY5wHdSKmxKRTdnpr7uQ" }
       ],
       "Rels B": [
         { name: "A New Star (1993)", image: "img/star.jpeg", tags: ["pop"], url: "https://open.spotify.com/album/6MxVqDR6nACRxGSePfK9y4?si=5QjqYzytQTm7PQAKBqOuHA" }
