La Casa Azul - La Gran Esfera

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         { name: "El Secreto", image: "img/secreto.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/4NJFWpVWPgPvrciytpxOvr?si=YSbugIWzRnSPbjfmU1zhJA" },
         { name: "PTSD", image: "img/ptsd.jpg", tags: ["trap"], url: "https://open.spotify.com/album/3uCDoXLQZnDAck1R6Y0Tuk?si=_7vlINIhS4SQzPp7hYkWfQ" }
       ],
+      "La Casa Azul": [
+        { name: "La Gran Esfera", image: "img/esfera.jpg", tags: ["pop", "indie", "electrónica"], url: "https://open.spotify.com/album/5f1cJH6cg1uxKKkQDPOfvh?si=7cGnqWHrTZ6rntiWZ0boeQ" }
+      ],
       "Quevedo": [
         { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"], url: "https://open.spotify.com/album/3V2ApPxUSquOkjLQU3wmjh?si=3X4Knt8sQoW0twly0X0bRw" }
       ],
