Azulejos de Corales - Dellafuente

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
       ],
       "Dellafuente": [
         { name: "Ansia Viva", image: "img/ansia.jpg", tags: ["trap", "flamenco"], url: "https://open.spotify.com/album/03a68tDUXs4dX7nVcVfJAn?si=56CIT1zVR6et29JT82wtpQ" },
+        { name: "Azulejos de Corales", image: "img/corales.jpg", tags: ["flamenco", "experimental", "fusión"], url: "https://open.spotify.com/album/4q1iG9Jub9KRC25vZ0f6y4?si=8CzGPTqiRvK1UV_23MQmNA" },
         { name: "Torii Yama", image: "img/yama.jpg", tags: ["trap"], url: "https://open.spotify.com/album/6zSKkBQfQs3B9YncN3SGyI?si=lvqw3dcXQD6YTAv6J0EAHQ" },
         { name: "Lagrimas pa otro dia", image: "img/lagrimas.jpg", tags: ["flamenco"], url: "https://open.spotify.com/album/3cPRpK8yUQV5T6QTt7XGfp?si=Iccqtrc4QC6_YJE1aFPGyg" }
+
       ],
       "Diego900": [
         { name: "La Espalda Del Sol", image: "img/espalda.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/0EMwFzMU6W8VlWVy6NKPUu?si=hCBaZcdGREGk2pUhbpJRmA" }
