SOS - SZA, Visión Túnel - Cruz Cafune

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       ],
       "Cruz Cafuné": [
         { name: "Blu€s", image: "img/azul.jpg", tags: ["trap"], url: "https://open.spotify.com/album/4cdd2jx9GScUzDETwJ6GEk?si=tZZmB9rETieP-sSn2EiECg" },
-        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap"], url: "https://open.spotify.com/album/7yvmtCjHcBe9DqIVl7AwQT?si=BAss2UN2TweO1nm94DlFlQ" }
+        { name: "Me Muevo Con Dios", image: "img/MMCD.png", tags: ["rap", "r&b"], url: "https://open.spotify.com/album/7yvmtCjHcBe9DqIVl7AwQT?si=BAss2UN2TweO1nm94DlFlQ" },
+        { name: "Visión Túnel", image: "img/tunel.jpeg", tags: ["trap"], url: "https://open.spotify.com/album/4DM8p5oOEbrBM5xzoO6qYU?si=v_adN3JlRmOMUrwPiBmc4g" }
       ],
       "Dano": [
         { name: "Nuevos Trapos", image: "img/trapos.jpeg", tags: ["rap"], url: "https://open.spotify.com/album/05QwR4mSOlpHbtYFAOcB4f?si=ioYz7V1mTcyOLSoKBAJqXg" }
@@ -140,7 +141,8 @@
         { name: "Sensaciones", image: "img/sens.jpg", tags: ["pop"], url: "https://open.spotify.com/album/7Hr8FOf7NQIe7UhLcllXq9?si=UkE2zZRsQ9qP_4bSPV5lNg" }
       ],
       "SZA": [
-        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/76290XdXVF9rPzGdNRWdCh?si=kFfr8PbpSi6A9rxDhreTxw" }
+        { name: "Ctrl", image: "img/ctrl.jpg", tags: ["r&b"], url: "https://open.spotify.com/album/76290XdXVF9rPzGdNRWdCh?si=kFfr8PbpSi6A9rxDhreTxw" },
+        { name: "SOS", image: "img/sos.png", tags: ["r&b"], url: "https://open.spotify.com/album/07w0rG5TETcyihsEIZR3qG?si=Q0xUpc6CSO2qRVGDpI45tg" }
       ],
       "Taifa Yallah": [
         { name: "Causa", image: "img/causa.jpg", tags: ["rap"], url: "https://open.spotify.com/album/5GyDhDfK24MhsOH1bX8gdW?si=dERDC1zRTMKnuStBj07X8A" }
