REGSLO REYES - JAZZ Y ROCK

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         { name: "Avida Dollars", image: "img/dollars.jpg", tags: ["rap"], url: "https://open.spotify.com/album/7Dl3kd377FvNAEVHHOMSTM?si=cFDrlHX7TQ6fKeVtiIr-dg" },
         { name: "El Madrileño", image: "img/mad.jpeg", tags: ["fusión", "flamenco"], url: "https://open.spotify.com/album/52QyC9nSbgtHFXyQRHsXJ9?si=NcbMIrJzTcWSAqImcDSruQ" }
       ],
+      "CBS Power All Stars": [ 
+        { name: "All Stars (The Album)", image: "img/stars.jpg", tags: ["rock", "pop"], url: ""}
+      ],
+      "Cheap Trick": [
+        { name: "Standing on the Edge", image: "img/trick.jpg", tags: ["rock", "power pop"], url: "https://open.spotify.com/album/2rzIBsrappXePwoyFcBtI6?si=ciAFDWk2Q5SEu72grDhdQg" }
+      ],
       "Choclock": [
         { name: "Daltónico pero me siento Azul", image: "img/dalton.jpeg", tags: ["r&b"], url: "https://open.spotify.com/album/2GS4OCw6wd47mu7OFdzWFH?si=haHGo6mpSDGvoteUFQ63tQ" }
       ],
@@ -119,6 +125,12 @@
       "La Casa Azul": [
         { name: "La Gran Esfera", image: "img/esfera.jpg", tags: ["pop", "indie", "electrónica"], url: "https://open.spotify.com/album/5f1cJH6cg1uxKKkQDPOfvh?si=7cGnqWHrTZ6rntiWZ0boeQ" }
       ],
+      "Mahavishnu Orchestra": [
+        { name: "Birds of Fire", image: "img/birds.jpg", tags: ["jazz"], url: "https://open.spotify.com/album/6SLknspfGod3v3TyWawl8J?si=KGePL-eWQEWWOXS5r845XA" }
+      ],
+      "Miles Davis": [
+        { name: "Sorcerer", image: "img/davis.jpg", tags: ["jazz"], url: "https://open.spotify.com/album/4ONkvBCQrd2A8qJ5Cw6FYo?si=GmRbKHt2TKqskTfhm9cAAw" }
+      ],
       "Quevedo": [
         { name: "Buenas Noches", image: "img/noches.jpg", tags: ["reggaetón"], url: "https://open.spotify.com/album/3V2ApPxUSquOkjLQU3wmjh?si=3X4Knt8sQoW0twly0X0bRw" }
       ],
@@ -149,8 +161,11 @@
       ],
       "The Weeknd": [
         { name: "Starboy", image: "img/starboy.jpg", tags: ["pop", "r&b"], url: "https://open.spotify.com/album/2ODvWsOgouMbaA5xf0RkJe?si=9Yge93NSQvC1MfDVAkb0kA" }
+      ],
+      "Los Grandes del Jazz": [
+        { name: "Grandes del Jazz Vol. 6", image: "img/grandes.jpg", tags: ["jazz"], url: "" }
       ]
-    };
+    };  
 
     let masonry;
 
