Arreglo Botón - COMPLETADO

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <option value="">Filtrar por estilo...</option>
 </select>
 
-<button id="random-btn">🎲 Disco Random</button>
+<button id="random-btn"> Disco Random</button>
 
 <div id="artists-wrapper">
   <div id="artists"></div>
